# ossso

./: .gitignore  Dockerfile  Procfile  docker-compose.yml
.github/workflows/: github-actions-master.yml
dokku/: nginx.conf.sigil  release-tasks.sh  setup.sh
ossso_app/: manage.py  openapi-schema.yml  pyproject.toml
ossso_app/api/: filters.py  schema.py  serializers.py  urls.py  views.py
ossso_app/api/templates/api/: docs.html
ossso_app/api/tests/: test_views.py
ossso_app/ossso/: asgi.py  settings.py  urls.py  wsgi.py
ossso_app/ossso/sso/: admin.py  apps.py  urls.py  views.py
ossso_app/sso/: admin.py  models.py  urls.py  views.py
ossso_app/sso/migrations/: 0001_initial.py  0002_auto_20211018_1926.py  0003_samlresponse.py  0004_redirecturi.py  0005_domain.py  0006_auto_20220122_1650.py
ossso_app/sso/tests/: data.py  test_views.py
ossso_app/web/: accounts.py  domains.py  organizations.py  saml_connections.py  urls.py  views.py
ossso_app/web/templates/: base.html  base_no_user.html  detail.html  index.html
ossso_app/web/templates/accounts/: profile.html
ossso_app/web/templates/domain/: detail.html  edit.html
ossso_app/web/templates/forms/: input.html  textarea.html
ossso_app/web/templates/organization/: connection_list.html  create.html  detail.html  edit.html  list.html
ossso_app/web/templates/registration/: login.html  register.html
ossso_app/web/templates/saml_connection/: detail.html  domain_list.html  edit.html
ossso_web/ossso/: docusaurus.config.js  package-lock.json  package.json
ossso_web/ossso/docs/: intro.md
(+2 files in other folders)
